moved files attributes and attributesattached